--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ exclude = [
 
 [lib]
 crate-type = ["cdylib", "rlib"]
-doctest = false # todo: re add doctest when we have better docs
+doctest = false # TODO: re add doctest when we have better docs
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
